--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,4 +1,33 @@
+html {
+  height: 100%;
+}
+
 body {
   background-color: #323846;
   color: #ffffff;
+  height: 100%;
+}
+
+a:link {
+  color: inherit;
+  text-decoration: none; /* no underline */
+}
+
+a:visited {
+  color: inherit;
+  text-decoration: none; /* no underline */
+}
+
+a:active {
+  color: inherit;
+  text-decoration: none; /* no underline */
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none; /* no underline */
+}
+
+.active-route {
+  background-color: red;
 }
